# tasklist-apk

./: .gitmodules  CMakeLists.txt
.github/workflows/: apk.yml
android/: AndroidManifest.xml  build.gradle
android/src/com/github/stemoretti/tasklist/: MainActivity.java
qml/: AboutPage.qml  DatePicker.qml  DateTimeDialog.qml  HorizontalListDivider.qml  LabelBodySecondary.qml  ListManagementPage.qml  ListPage.qml  ListViewEdgeEffect.qml  Message.qml  OptionsDialog.qml  PopupConfirm.qml  ReorderListView.qml  SelectItemsBar.qml  SettingsCheckItem.qml  SettingsContinentsPage.qml  SettingsCountriesPage.qml  SettingsPage.qml  SortedListView.qml  TaskDetailsPage.qml  TextInputBar.qml  TimePicker.qml  TimePickerCircular.qml  TimePickerTumbler.qml  main.qml
src/: appdata.cpp  appdata.h  list.cpp  list.h  main.cpp  settings.cpp  settings.h  sortfiltermodel.cpp  system.cpp  system.h  task.cpp  task.h
translations/: tasklist_en.ts  tasklist_it.ts
